--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,16 @@
 {% block content %}
 {% endblock content %}
 </div>
-<h1> {{ form.instance.name }} </h1>
+<ul>
+    {% for obj in object_list %}
+    <li>{{ obj }}<br/>
+        {{ obj.name }} {{ obj.creator }} {{ obj.created }} {{ obj.updated }}</li>
+
+    {% endfor %}
+</ul>
+
+
+
 
 {% include 'snippets/js.html' %}
 </body>
