--- a/taskmanager/templates/taskmanager/task_list.html
+++ b/taskmanager/templates/taskmanager/task_list.html
@@ -1,8 +1,12 @@
+{% include 'snippets/css.html '%}
+{% include 'snippets/nav.html' %}
 <div class="conteiner">
 {% block content %}
+{% endblock content %}
 </div>
 <div class="table-bordered">
 <ul>
+    {% for obj in object_list %}
     <li>{{ obj }}<br/>
         {{ obj.name }} {{ obj.creator }} {{ obj.created }} {{ obj.updated }}<button>Edit</button><button>Delete</button></li>
 
