--- a/taskmanager/templates/taskmanager/task_list.html
+++ b/taskmanager/templates/taskmanager/task_list.html
@@ -5,7 +5,7 @@
 {% endblock content %}
 </div>
 <form method="get" action="{% url 'create' %}">
-<button type="submit">Create Task</button>
+<button type="submit" class="btn btn-primary btn-lg">Create Task</button>
 </form>
 {% include 'snippets/task_table.html' %}
 {% include 'snippets/js.html' %}
