--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -1,11 +1,11 @@
-<div class="container">
-    <h1>Task manager</h1>
+<h1>Task manager</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     {% if request.user.is_authenticated %}
-    <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'tasks' %}">Tasks</a>
-    <a href="{% url 'user' %}">Profile</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+    <a class="navbar-brand" href="{% url 'tasks' %}">Tasks</a>
+    <a class="navbar-brand" href="{% url 'user' %}">Profile</a>
     {% else %}
-    <a href="{% url 'login' %}">Tasks</a>
-    <a href="{% url 'sign up' %}">Profile</a>
+    <a class="navbar-brand" href="{% url 'login' %}">Tasks</a>
+    <a class="navbar-brand" href="{% url 'sign up' %}">Profile</a>
     {% endif %}
-</div>
+</nav>
