--- a/templates/subtask_form.html
+++ b/templates/subtask_form.html
@@ -1,3 +1,5 @@
+{% include 'snippets/css.html '%}
+{% include 'snippets/nav.html' %}
 {% if form.errors.non_field_errors %}
 {{ form.errors.non_field_errors }}
 {% endif %}
