--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -3,9 +3,9 @@
     {% if request.user.is_authenticated %}
     <a class="navbar-brand" href="{% url 'home' %}">Home</a>
     <a class="navbar-brand" href="{% url 'tasks' %}">Tasks</a>
-    <a class="navbar-brand" href="{% url 'user' %}">Profile</a>
+    <a class="navbar-brand" href="{% url 'user' user.username %}">Profile</a>
     {% else %}
     <a class="navbar-brand" href="{% url 'login' %}">Tasks</a>
-    <a class="navbar-brand" href="{% url 'sign up' %}">Profile</a>
+    <a class="navbar-brand" href="{% url 'register' %}">Profile</a>
     {% endif %}
 </nav>
