--- a/templates/snippets/task_table.html
+++ b/templates/snippets/task_table.html
@@ -1,32 +1,33 @@
 <div class="table">
-          <table class="table" id="tasktable">
-             <tr class="nodrop">
-             <th scope="col">Task id</th>
-             <th scope="col">Subject</th>
-             <th scope="col">Description</th>
-             <th scope="col">Status</th>
-             <th scope="col">Assigned</th>
-             <th scope="col">Updated</th>
-             <th scope="col">Create Date</th>
-             <th scope="col">Action</th>
-             </tr>
+    <table class="table" id="tasktable">
+        <tr class="nodrop">
+            <th scope="col">Task id</th>
+            <th scope="col">Subject</th>
+            <th scope="col">Description</th>
+            <th scope="col">Status</th>
+            <th scope="col">Assigned</th>
+            <th scope="col">Updated</th>
+            <th scope="col">Create Date</th>
+            <th scope="col">Action</th>
+        </tr>
 
-    {% for obj in object_list %}
+        {% for obj in object_list %}
 
-    <tr>
-        <td>{{ obj.id }}</td>
-        <td>{{ obj.name }}</td>
-        <td>{{ obj.description }}</td>
-        <td>{{ obj.get_status_display }}</td>
-        <td>{{ obj.assigned }}</td>
-        <td>{{ obj.updated }}</td>
-        <td>{{ obj.created }}</td>
-        <td><a href="{{ obj.get_absolute_url }}" class="btn btn-secondary" role="button" aria-pressed="true">View</a>
-            <a href="#" class="btn btn-danger" role="button" aria-pressed="true">Delete</a>
-        </td>
-    </tr>
+        <tr>
+            <td>{{ obj.id }}</td>
+            <td>{{ obj.name }}</td>
+            <td>{{ obj.description }}</td>
+            <td>{{ obj.get_status_display }}</td>
+            <td>{{ obj.assigned }}</td>
+            <td>{{ obj.updated }}</td>
+            <td>{{ obj.created }}</td>
+            <td><a href="{{ obj.get_absolute_url }}" class="btn btn-secondary" role="button"
+                   aria-pressed="true">View</a>
+                <a href="#" class="btn btn-danger" role="button" aria-pressed="true">Delete</a>
+            </td>
+        </tr>
 
-    {% endfor %}
+        {% endfor %}
 
 </div>
 
